 * Miscellaneous and bug fixes:
   * When warning the player about installing add-ons with missing dependencies,
     make 'OK' and 'Cancel' work as expected (bug #15960)
   * Don't crash if a [story] [part] [if] misses [then] or [else] (bug #16028)
   * Added an advanced preference for disabling desktop notifications.
   * Added an internal command 'unsafe_lua' for enabling remote debugging.

Version 1.8.1:
 * Campaigns:
   * Northern Rebirth:
     * In Showdown, you recover full gold only if Sisal survived the previous
       scenario.
   * The South Guard:
     * In 'Vengeance', the final objective is now revealed at the beginning of
       the scenario.
 * Language and i18n:
   * Updated translations: British English, Czech, Finnish, French, Galician,
     German, Hungarian, Italian, Japanese, Latin, Lithuanian, Polish, Russian,
     Serbian, Slovak
   * Fixed bug #15653: Made untranslateable strings translateable.
   * Fixed bug #15843: Made untranslateable strings translateable.
   * Fixed bug #15937: Made untranslateable strings translateable.
 * Multiplayer:
   * Added the winner of the first Wesnoth map compitition, the 2 player map
     "Elensefar Courtyard" by krotop.
   * Fixed bug #15865: missing WML Child error.
 * User interface:
   * Fixed bug #15716: Lobby crash when refreshing with filtered out games
   * Fixed bug #15768: Avoid parts of the previous game show in the lobby
   * Re-added the old MP lobby
   * Added a preference for switching between the old and new lobby in the
     preferences dialog in the "Multiplayer" tab. Defaults to the old lobby.
   * Draw the map border over _off^_usr tiles too.
 * Miscellaneous and bug fixes:
   * Removed the stats upload feature.
   * Better fix for bug #14765 now that string freeze is off
   * Fixed the ping timeout not waiting for the default ping interval when
     ping timeout is not set to 0
   * Fixed bug #14730: tab completion not working in the new lobby